Fix up tab spacing.

--- a/scss/_notifications.scss
+++ b/scss/_notifications.scss
@@ -139,4 +139,7 @@
 
 		}
 	}
+	p + .sui-notice {
+		margin-top: 30px;
+	}
 }
