--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -54,7 +54,7 @@
 				left: 0;
 				right: 0;
 				width: auto;
-				padding: 20px 0 0;
+				padding: 30px 0 0;
 				position: absolute;
 				min-height: 150px;
 				border-top: 1px solid $tabs-content-border-color;
